--- a/compliance/regulatory/TOC.yml
+++ b/compliance/regulatory/TOC.yml
@@ -248,8 +248,8 @@
       items:
         - name: 責任整備檢查清單
           href: gdpr-arc.md
-        - name: Azure 和 Dynamics 365
-          href: gdpr-arc-azure-dynamics.md
+        - name: Azure、Dynamics 365 和 Windows
+          href: gdpr-arc-azure-dynamics-windows.md
         - name: Microsoft 支援服務與專業服務
           href: gdpr-arc-prof-services.md
         - name: Office 365
@@ -274,20 +274,18 @@
           href: gdpr-dsr-office365.md
         - name: Visual Studio 系列
           href: gdpr-dsr-visual-studio-family.md
-        - name: Windows 企業版
+        - name: Windows
           href: gdpr-dsr-windows.md
     - name: 外洩通知
       items:
         - name: 外洩通知
           href: gdpr-breach-notification.md
-        - name: Azure 與 Dynamics 365
-          href: gdpr-breach-azure-dynamics.md
+        - name: Azure、Dynamics 365 和 Windows
+          href: gdpr-breach-azure-dynamics-windows.md
         - name: Microsoft 支援服務與專業服務
           href: gdpr-breach-microsoft-support-professional-services.md
         - name: Office 365
           href: gdpr-breach-office365.md
-        - name: Windows 企業版
-          href: gdpr-breach-windows.md
     - name: 資料保護影響聲明
       items:
         - name: 資料保護影響評估
@@ -300,7 +298,7 @@
           href: gdpr-dpia-prof-services.md
         - name: Office 365
           href: gdpr-dpia-office365.md
-        - name: Windows 企業版
+        - name: Windows
           href: gdpr-dpia-windows.md
     - name: 適用於內部部署 Office 伺服器的 GDPR
       items:
