--- a/compliance/regulatory/offering-home.yml
+++ b/compliance/regulatory/offering-home.yml
@@ -43,11 +43,11 @@ conceptualContent:
         - url: offering-ISO-27001.md
           itemType: reference
           text: ISO 27001
-    - title: 全域
-      links:
         - url: offering-ISO-27017.md
           itemType: reference
           text: ISO 27017
+    - title: 全域
+      links:
         - url: offering-ISO-27018.md
           itemType: reference
           text: ISO 27018
@@ -57,9 +57,15 @@ conceptualContent:
         - url: /azure/compliance/offerings/offering-iso-9001
           itemType: reference
           text: ISO 9001
-        - url: offering-soc.md
+        - url: offering-soc-1.md
           itemType: reference
-          text: SOC
+          text: SOC 1
+        - url: offering-soc-2.md
+          itemType: reference
+          text: SOC 2
+        - url: offering-soc-3.md
+          itemType: reference
+          text: SOC 3
         - url: offering-wcag-2-1.md
           itemType: reference
           text: WCAG
@@ -74,20 +80,23 @@ conceptualContent:
         - url: offering-dfars.md
           itemType: reference
           text: DFARS
-        - url: offering-dod-disa-l2-l4-l5.md
+        - url: offering-dod-il2.md
           itemType: reference
-          text: DoD DISA L2，L4，L5
-        - url: offering-doe-10-cfr-part-810.md
+          text: DoD IL2
+        - url: offering-dod-il5.md
           itemType: reference
-          text: DoE 10 CFR Part 810
+          text: DoD IL5
         - url: /azure/compliance/offerings/offering-doe-10-cfr-part-810
           itemType: reference
+          text: DoE 10 CFR Part 810
+        - url: offering-ear.md
+          itemType: reference
           text: 'EAR (美國出口 Adm。 Reg ) '
+    - title: 美國政府
+      links:
         - url: offering-fedramp.md
           itemType: reference
           text: FedRAMP
-    - title: 美國政府
-      links:
         - url: offering-fips-140-2.md
           itemType: reference
           text: FIPS 140-2
@@ -137,7 +146,7 @@ conceptualContent:
           text: FACT (英國)
         - url: /azure/compliance/offerings/offering-fca-pra-uk
           itemType: reference
-          text: 'FCA + PRA (UK) '
+          text: FCA + PRA (英國)
         - url: offering-fda-cfr-title-21-part-11.md
           itemType: reference
           text: FDA CFR Title 21 Part 11
@@ -186,13 +195,13 @@ conceptualContent:
           text: KNF (波蘭)
         - url: /azure/compliance/offerings/offering-mars-e-us
           itemType: reference
-          text: '火星-E (US) '
+          text: MARS-E (美國)
         - url: offering-mas-abs-singapore.md
           itemType: reference
           text: MAS + ABS (新加坡)
         - url: /azure/compliance/offerings/offering-mpa
           itemType: reference
-          text: M p a
+          text: MPA
         - url: offering-nbb-fsma-belgium.md
           itemType: reference
           text: NBB + FSMA (比利時)
@@ -221,7 +230,7 @@ conceptualContent:
           text: SEC 17a-4
         - url: /azure/compliance/offerings/offering-sec-reg-sci-us
           itemType: reference
-          text: 'SEC 法規 SCI (US) '
+          text: SEC 法規 SCI (美國)
         - url: /azure/compliance/offerings/offering-shared-assessments
           itemType: reference
           text: 共用評估
@@ -277,9 +286,6 @@ conceptualContent:
         - url: offering-eu-model-clauses.md
           itemType: reference
           text: 歐盟示範條款
-        - url: offering-eu-us-privacy-shield.md
-          itemType: reference
-          text: 歐盟-US 隱私權防護板
         - url: 'https://www.trustcenter.cn/compliance/default.html#GB18030'
           itemType: reference
           text: GB 18030 (中國)
