--- a/compliance/assurance/TOC.yml
+++ b/compliance/assurance/TOC.yml
@@ -2,16 +2,14 @@
   items:
     - name: 架構概觀
       href: assurance-architecture.md
-    - name: AAD 隔離和存取控制
-      href: /microsoft-365/enterprise/microsoft-365-isolation-in-azure-active-directory?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
     - name: Azure 隔離控制項
       href: /azure/security/fundamentals/isolation-choices?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
+    - name: Microsoft Azure Active Directory 隔離控制項
+      href: /microsoft-365/enterprise/microsoft-365-isolation-in-azure-active-directory?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
+    - name: Microsoft 365 隔離控制項
+      href: assurance-microsoft-365-isolation-controls.md
     - name: Microsoft 365 基礎結構安全性
       href: assurance-securing-microsoft-365-infrastructure.md
-    - name: Microsoft 365 隔離控制項
-      href: /microsoft-365/enterprise/microsoft-365-isolation-controls?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
-    - name: Microsoft 365 租用戶隔離
-      href: /microsoft-365/enterprise/microsoft-365-tenant-isolation-overview?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 稽核記錄
   items:
     - name: 稽核記錄概觀
