--- a/compliance/regulatory/offering-home.yml
+++ b/compliance/regulatory/offering-home.yml
@@ -17,8 +17,8 @@ metadata:
   ms.date: 11/30/2020
   localization_priority: Normal
 conceptualContent:
-  title: Microsoft 合規性方案
-  summary: Microsoft 365、Azure、Dynamics 365、Power Platform 及其他服務的資訊，以協助您進行資料收集和使用的國家、地區和行業特定的規章。
+  title: Azure、Dynamics 365 及 Microsoft 365 規範服務
+  summary: Azure、Dynamics 365、Microsoft 365 及電源平臺的資訊，以及其他服務，可協助您瞭解資料收集和使用的國家、地區和行業特定的規章。
   items:
     - title: 全域
       links:
@@ -163,7 +163,7 @@ conceptualContent:
           text: FINMA (瑞士)
         - url: offering-finra-4511.md
           itemType: reference
-          text: FINRA 4511
+          text: 'FINRA 4511 (US) '
         - url: offering-fisc-japan.md
           itemType: reference
           text: FISC (日本)
@@ -172,7 +172,7 @@ conceptualContent:
           text: FSA (丹麥)
         - url: offering-glba.md
           itemType: reference
-          text: GLBA
+          text: 'GLBA (US) '
         - url: /azure/compliance/offerings/offering-gsma
           itemType: reference
           text: GSMA
@@ -185,11 +185,11 @@ conceptualContent:
         - url: offering-hipaa-hitech.md
           itemType: reference
           text: HIPAA/高科技
+    - title: 產業
+      links:
         - url: offering-hitrust.md
           itemType: reference
           text: HITRUST
-    - title: 產業
-      links:
         - url: offering-knf-poland.md
           itemType: reference
           text: KNF (波蘭)
@@ -220,11 +220,11 @@ conceptualContent:
         - url: offering-PCI-DSS.md
           itemType: reference
           text: PCI-DSS
+    - title: 產業
+      links:
         - url: offering-rbi-irdai-india.md
           itemType: reference
           text: RBI + IRDAI (印度)
-    - title: 產業
-      links:
         - url: offering-sec-17a-4.md
           itemType: reference
           text: SEC 17a-4
@@ -239,7 +239,7 @@ conceptualContent:
           text: SOX
         - url: /azure/compliance/offerings/offering-tisax
           itemType: reference
-          text: TISAX (德國)
+          text: TISAX
         - url: offering-trusight.md
           itemType: reference
           text: TruSight
