commit translated contents

--- a/compliance/regulatory/TOC.yml
+++ b/compliance/regulatory/TOC.yml
@@ -12,8 +12,6 @@
           href: /azure/compliance/offerings/offering-csa-star-certification?toc=/compliance/regulatory/toc.json&bc=/compliance/regulatory/breadcrumb/toc.json
         - name: CSA STAR 自我評估
           href: offering-csa-star-self-assessment.md
-        - name: ISO - 建議的行動計劃
-          href: iso-action-plan.md
         - name: ISO 20000-1-2011
           href: /azure/compliance/offerings/offering-iso-20000-1?toc=/compliance/regulatory/toc.json&bc=/compliance/regulatory/breadcrumb/toc.json
         - name: ISO 22301
@@ -78,7 +76,7 @@
       items:
         - name: 汽車
           items:
-            - name: TISAX (德國)
+            - name: TISAX
               href: /azure/compliance/offerings/offering-tisax?toc=/compliance/regulatory/toc.json&bc=/compliance/regulatory/breadcrumb/toc.json
         - name: 教育版
           items:
@@ -108,13 +106,13 @@
               href: offering-ffiec-us.md
             - name: FINMA (瑞士)
               href: offering-finma-switzerland.md
-            - name: FINRA 4511
+            - name: FINRA 4511 (美國)
               href: offering-finra-4511.md
             - name: FISC (日本)
               href: offering-fisc-japan.md
             - name: FSA (丹麥)
               href: offering-fsa-denmark.md
-            - name: GLBA
+            - name: GLBA (美國)
               href: offering-glba.md
             - name: KNF (波蘭)
               href: offering-knf-poland.md
