--- a/compliance/assurance/TOC.yml
+++ b/compliance/assurance/TOC.yml
@@ -10,6 +10,8 @@
       href: assurance-microsoft-365-isolation-controls.md
     - name: Microsoft 365 基礎結構安全性
       href: assurance-securing-microsoft-365-infrastructure.md
+    - name: 共同責任
+      href: /azure/security/fundamentals/shared-responsibility?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 稽核記錄
   items:
     - name: 稽核記錄概觀
