--- a/compliance/assurance/TOC.yml
+++ b/compliance/assurance/TOC.yml
@@ -1,3 +1,5 @@
+- name: Microsoft Cloud 的風險評定指南
+  href: assurance-risk-assessment-guide.md
 - name: 架構
   items:
     - name: 架構概觀
@@ -10,8 +12,6 @@
       href: assurance-microsoft-365-isolation-controls.md
     - name: Microsoft 365 基礎結構安全性
       href: assurance-securing-microsoft-365-infrastructure.md
-    - name: 共同責任
-      href: /azure/security/fundamentals/shared-responsibility?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 稽核記錄
   items:
     - name: 稽核記錄概觀
@@ -192,6 +192,8 @@
   items:
     - name: 安全性開發與作業概觀
       href: assurance-security-development-and-operation.md
+    - name: Microsoft 365 合規性計畫
+      href: assurance-microsoft-365-compliance-program.md
     - name: Azure 程式碼完整性
       href: /azure/security/fundamentals/code-integrity?toc=/compliance/assurance/toc.json&bc=/compliance/assurance/breadcrumb/toc.json
 - name: 安全性監視
